--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -19,7 +19,7 @@ filebeat.prospectors:
 
   # Paths that should be crawled and fetched. Glob based paths.
   paths:
-    - /log/*.log
+    - /log/*.json
     #- c:\programdata\elasticsearch\logs\*
   registry_file: /log/.registry
 
