--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -90,3 +90,4 @@ elasticsearch.url: "http://elasticsearch:9200"
 # Set the interval in milliseconds to sample system and process performance
 # metrics. Minimum is 100ms. Defaults to 10000.
 # ops.interval: 10000
+# tilemap.url: "http://{s}.maps.owm.io/current/RAIN_STYLE/{z}/{x}/{y}?appid=b1b15e88fa797225412429c1c50c122a1"
