--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -6,31 +6,33 @@ input {
 }
 
 ## Add your filters / logstash plugins configuration here
-filter {
-  date { 
-    match => ["TIME", "ISO8601" ]
-    timezone => 'UTC'
-  #  remove_field => [ "published" ]
-  }
+# filter {
+#  date { 
+#    match => ["TIME", "ISO8601" ]
+#    timezone => 'UTC'
+#    remove_field => [ "published" ]
+#  }
 
   # We don't care for 'updated' anymore
   # Removing also logstash's internal '@version' field, cf.: https://github.com/elastic/logstash/issues/3866
   # mutate { remove_field => [ "updated", "@version" ] }  
 
-  # Save coordinates in ES default point mapping 'geoip'
-  if [longitude] and [latitude] {  
+  # Save coordinates in ES default point mapping 'location'
+
     mutate {
       convert => { 
-        "longitude" => "float" 
-        "latitude" => "float" 
+        "LONGITUDE" => "float" 
+        "LATITUDE" => "float" 
       }
       rename => {
-        "longitude" => "[geoip][location][lon]"
-        "latitude" => "[geoip][location][lat]"
+        "LONGITUDE" => "[location][lon]"
+        "LATITUDE" => "[location][lat]"
       }
     }
-
-  }
+  # else {
+  # geoip { source => "host" }
+  # }
+  
   mutate{
     split => ["TIME" , " "]
     
@@ -46,9 +48,7 @@ filter {
 
   # else do a geoip lookup for the ip address
   # https://www.elastic.co/guide/en/logstash/5.0/plugins-filters-geoip.html
-  else {
-    geoip { source => "host" }
-  }
+
 
   # move entities -> entities.names avoid conflicts with opennlp
   # cf.: https://github.com/awesome-inc/hello.kibana/issues/5
