running logstash conf

--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -1,75 +1,42 @@
 input {
 	beats {
 		port => 5044
-		codec => "json"
+        codec => "json"
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
-# filter {
-#  date { 
-#    match => ["TIME", "ISO8601" ]
-#    timezone => 'UTC'
-#    remove_field => [ "published" ]
-#  }
-
-  # We don't care for 'updated' anymore
-  # Removing also logstash's internal '@version' field, cf.: https://github.com/elastic/logstash/issues/3866
-  # mutate { remove_field => [ "updated", "@version" ] }  
-
-  # Save coordinates in ES default point mapping 'location'
-
-    mutate {
+filter{
+ mutate {
       convert => { 
         "LONGITUDE" => "float" 
         "LATITUDE" => "float" 
       }
       rename => {
-        "LONGITUDE" => "[location][lon]"
-        "LATITUDE" => "[location][lat]"
+        "LONGITUDE" => "[LOCATION][lon]"
+        "LATITUDE" => "[LOCATION][lat]"
       }
+
     }
-  # else {
-  # geoip { source => "host" }
-  # }
-  
-  mutate{
-    split => ["TIME" , " "]
     
-  }
-  ruby {
-        # Go directly to the array and remove the last element.
-        code => "event['TIME'].pop()"
+    mutate{
+    gsub => ["TIME", "GMT", ""]
+    
     }
-    mutate {
-        # Join together whats left as the class name.
-        join  => ["TIME", " "]
+    date {
+      match => ["TIME", "ISO8601"]
+      target => "TIME"
     }
-
-  # else do a geoip lookup for the ip address
-  # https://www.elastic.co/guide/en/logstash/5.0/plugins-filters-geoip.html
-
-
-  # move entities -> entities.names avoid conflicts with opennlp
-  # cf.: https://github.com/awesome-inc/hello.kibana/issues/5
-  # TODO: Need to change Kibana configs as well
-  # if [entities] {
-  #  mutate {
-  #  rename => {
-  #    "entities" => "[entities][names]"
-  #  }
-  # }
-  #}
 
 }
-
 
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-		index => "vessel-%{YYYY.MM}"
-    document_id => "%{[MMSI]}"
-    # pipeline => "opennlp-pipeline"
+        index => "vessel"
+        document_id => "%{[MMSI]}"
+        manage_template => false
 	}
 }
+
