--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -20,11 +20,11 @@ filter{
     }
     
     mutate{
-    gsub => ["TIME", "GMT", ""]
+    gsub => ["TIME", " GMT", ""]
     
     }
     date {
-      match => ["TIME", "ISO8601"]
+      match => ["TIME", "yyyy-MM-dd HH:mm:ss","ISO8601"]
       target => "TIME"
     }
 
@@ -34,9 +34,9 @@ filter{
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-        index => "vessel"
+        index => "ais-%{+YYYY.MM}"
         document_id => "%{[MMSI]}"
-        manage_template => false
+        manage_template => "false"
 	}
 }
 
