--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -1,7 +1,7 @@
 input {
 	beats {
 		port => 5044
-        codec => "json"
+    codec => "json"
 	}
 }
 
@@ -19,15 +19,16 @@ filter{
 
     }
     
-    mutate{
+  mutate{
     gsub => ["TIME", " GMT", ""]
     
-    }
-    date {
-      match => ["TIME", "yyyy-MM-dd HH:mm:ss","ISO8601"]
-      target => "TIME"
-    }
+  }
 
+  date {
+      match => ["TIME", "yyyy-MM-dd HH:mm:ss"]
+      target => "@timestamp"
+      remove_field => [ "TIME" ]
+     }
 }
 
 
@@ -36,7 +37,7 @@ output {
 		hosts => "elasticsearch:9200"
         index => "ais-%{+YYYY.MM}"
         document_id => "%{[MMSI]}"
-        manage_template => "false"
+        manage_template => false
 	}
 }
 
