Fixed logstash config

--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -3,7 +3,7 @@ FROM logstash:5
 # Add your logstash plugins setup here
 # Example: RUN logstash-plugin install logstash-filter-json 
 
-RUN rm /etc/logstash/log4j2.properties
+COPY log4j2.properties /etc/logstash/log4j2.properties
 
 EXPOSE 5044
 CMD ["-f", "/etc/logstash/conf.d"]
