--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -5,39 +5,37 @@ input {
 	}
 }
 
-## Add your filters / logstash plugins configuration here
 filter{
- mutate {
-      convert => { 
-        "LONGITUDE" => "float" 
-        "LATITUDE" => "float" 
-      }
-      rename => {
-        "LONGITUDE" => "[LOCATION][lon]"
-        "LATITUDE" => "[LOCATION][lat]"
-      }
-
+  mutate {
+    convert => { 
+      "LONGITUDE" => "float" 
+      "LATITUDE" => "float" 
     }
+    rename => {
+      "LONGITUDE" => "[LOCATION][lon]"
+      "LATITUDE" => "[LOCATION][lat]"
+    }
+ }
     
-  mutate{
+  mutate {
     gsub => ["TIME", " GMT", ""]
-    
   }
 
   date {
-      match => ["TIME", "yyyy-MM-dd HH:mm:ss"]
-      target => "@timestamp"
-      remove_field => [ "TIME" ]
-     }
+    match => ["TIME", "ISO8601", "yyyy-MM-dd HH:mm:ss"]
+    timezone => 'UTC'
+    remove_field => [ "TIME" ]
+  }
 }
 
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-        index => "ais-%{+YYYY.MM}"
-        document_id => "%{[MMSI]}"
-        manage_template => false
+    index => "ais-%{+YYYY.MM.dd}"
+    document_id => "%{[MMSI]}"
+    document_type => "vessel"
+    manage_template => false
 	}
 }
 
