logstash setting id as mmsi_timestamp

--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -33,7 +33,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
     index => "ais-%{+YYYY.MM.dd}"
-    document_id => "%{[MMSI]}"
+    document_id => "%{[MMSI]}_%{[@timestamp]}"
     document_type => "vessel"
     manage_template => false
 	}
