--- a/riskmap/bower.json
+++ b/riskmap/bower.json
@@ -18,10 +18,13 @@
     "tests"
   ],
   "dependencies": {
-  	"jquery": "~2.1.4",
+    "jquery": "~2.1.4",
     "leaflet-draw": "~0.4.3",
     "elasticsearch": "~12.0.1",
     "leaflet-playback": "~0.2.1",
     "vis": "~3.12.0"
+  },
+  "resolutions": {
+    "leaflet": "~0.7.0"
   }
 }
