--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -16,11 +16,15 @@ filebeat.prospectors:
 # Below are the prospector specific configurations.
 
 - input_type: log
-
-  # Paths that should be crawled and fetched. Glob based paths.
   paths:
-    - /log/*.json
-    #- c:\programdata\elasticsearch\logs\*
+    - /log/aishub_*.json
+  document_type: vessel
+  registry_file: /log/.registry
+
+- input_type: log
+  paths:
+    - /log/warehouse_*.json
+  document_type: warehouse
   registry_file: /log/.registry
 
   # Exclude lines. A list of regular expressions to match. It drops the lines that are
