--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -5,45 +5,26 @@ input {
 	}
 }
 
-filter {
-
-  # vessel data from AISHub
-  if [type] == "vessel" {
+filter{
+  mutate {
+    convert => { 
+      "LONGITUDE" => "float" 
+      "LATITUDE" => "float" 
+    }
+    rename => {
+      "LONGITUDE" => "[LOCATION][lon]"
+      "LATITUDE" => "[LOCATION][lat]"
+    }
+ }
     
-    mutate {
-      convert => { 
-        "LONGITUDE" => "float" 
-        "LATITUDE" => "float" 
-        "DRAUGHT" => "float" 
-      }
-      # move to "location" object, so we can use geo_point
-      rename => {
-        "LONGITUDE" => "[LOCATION][lon]"
-        "LATITUDE" => "[LOCATION][lat]"
-      }
-    }
-      
-    # time handling, cut GMT
-    mutate {
-      gsub => ["TIME", " GMT", ""]
-    }
-    date {
-      match => ["TIME", "ISO8601", "yyyy-MM-dd HH:mm:ss"]
-      timezone => 'UTC'
-      remove_field => [ "TIME" ]
-    }
-
-    # Set id based on MMSI + timestamp
-    mutate {
-      add_field => { "id" => "%{MMSI}_%{@timestamp}" }
-    }
+  mutate {
+    gsub => ["TIME", " GMT", ""]
   }
 
-  if [type] == "warehouse" {
-    # Set id based on MMSI + timestamp
-    mutate {
-      add_field => { "id" => "%{[properties][LocID]}" }
-    }
+  date {
+    match => ["TIME", "ISO8601", "yyyy-MM-dd HH:mm:ss"]
+    timezone => 'UTC'
+    remove_field => [ "TIME" ]
   }
 }
 
@@ -51,11 +32,10 @@ filter {
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-    document_id => "%{[id]}"
+    index => "ais-%{+YYYY.MM.dd}"
+    document_id => "%{[MMSI]}_%{[@timestamp]}"
+    document_type => "vessel"
     manage_template => false
-
-    # TODO: pipeline, https://www.elastic.co/guide/en/logstash/5.0/plugins-outputs-elasticsearch.html#plugins-outputs-elasticsearch-pipeline
-    pipeline => "riskmap-pipeline"     
 	}
 }
 
