--- a/riskmap/bower.json
+++ b/riskmap/bower.json
@@ -21,7 +21,7 @@
     "jquery": "~2.1.4",
     "leaflet-draw": "~0.4.3",
     "elasticsearch": "~12.0.1",
-    "leaflet-playback": "~0.2.1",
+    "leaflet-playback": "https://github.com/hallahan/LeafletPlayback.git#master",
     "vis": "~3.12.0"
   },
   "resolutions": {
