--- a/logstash/config/logstash.conf
+++ b/logstash/config/logstash.conf
@@ -36,6 +36,7 @@ filter {
     # Set id based on MMSI + timestamp
     mutate {
       add_field => { "id" => "%{MMSI}_%{@timestamp}" }
+      add_field => { "[@metadata][index]" => "logstash-%{+YYYY.MM.dd}" }
     }
   }
 
@@ -43,6 +44,8 @@ filter {
     # Set id based on MMSI + timestamp
     mutate {
       add_field => { "id" => "%{[properties][LocID]}" }
+      add_field => { "[@metadata][index]" => "logstash-constant" }
+      
     }
   }
 }
@@ -52,6 +55,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
     document_id => "%{[id]}"
+    index => "%{[@metadata][index]}"
     manage_template => false
 
     # TODO: pipeline, https://www.elastic.co/guide/en/logstash/5.0/plugins-outputs-elasticsearch.html#plugins-outputs-elasticsearch-pipeline
