--- a/riskmap/bower.json
+++ b/riskmap/bower.json
@@ -22,7 +22,8 @@
     "leaflet-draw": "~0.4.3",
     "elasticsearch": "~12.0.1",
     "leaflet-playback": "https://github.com/hallahan/LeafletPlayback.git#master",
-    "vis": "~3.12.0"
+    "vis": "~3.12.0",
+    "bootstrap": "~3.3.7"
   },
   "resolutions": {
     "leaflet": "~0.7.0"
