--- a/riskmap/bower.json
+++ b/riskmap/bower.json
@@ -23,7 +23,8 @@
     "elasticsearch": "~12.0.1",
     "leaflet-playback": "https://github.com/hallahan/LeafletPlayback.git#master",
     "vis": "~3.12.0",
-    "bootstrap": "~3.3.7"
+    "bootstrap": "~3.3.7",
+    "form.validation": "~a6001290fe"
   },
   "resolutions": {
     "leaflet": "~0.7.0"
