--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       context: riskmap/
       args:
         http_proxy: ${http_proxy}
+        https_proxy: ${https_proxy}
         no_proxy: ${no_proxy}
     ports:
        - "8080:8080"
